--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -7,26 +7,52 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <form class="product-form" action="/admin/<% if (editing) {%>edit-product/<%=product._id%><%}else{%>add-product<%} %>" method="POST">
+        <% if(errorMessage) {%>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
+        
+
+        <form class="product-form" action="/admin/<% if (editing) {%>edit-product/<%=product._id%><%}else{%>add-product<%} %>" method="POST"
+            enctype="multipart/form-data"> 
+            
+            <input type="hidden" name="_csrf" value="<%=csrfToken%>" >
+            
             <div class="form-control">
                 <label for="title">Title</label>
-                <input type="text" name="title" id="title" value="<% if (editing) {%> <%=product.title%> <%} %>">
+                <input type="text" name="title" id="title" value="<% if (editing||hasError) {%> <%=product.title%> <%} %>">
             </div>
+
             <div class="form-control">
-                <label for="imageUrl">Image URL</label>
-                <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) {%> <%=product.imageUrl%> <%} %>">
+                <label for="image">Image</label>
+                <input 
+                    type="file" 
+                    name="image" 
+                    id="image" >
             </div>
+
             <div class="form-control">
                 <label for="price">Price</label>
-                <input  type="number" name="price" id="price" step="0.01" value=<% if (editing) {%> <%=product.price%> <%} %>>
+                <input  
+                type="number" 
+                name="price" 
+                id="price" 
+                step="0.01" 
+                value="<% if (editing || hasError) {%><%= product.price %><% } %>"
+                >
             </div>
+
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" rows="5"><% if (editing) {%> <%=product.description%> <%} %></textarea>
+                <textarea 
+                name="description" 
+                id="description" rows="5">
+                <% if (editing||hasError) {%> <%=product.description%> <%} %></textarea>
             </div>
+
   <% if(editing) {%>
     <input type="hidden" value="<%= product._id %>" name="productId">
     <%}%>
+    
             <button class="btn" type="submit"><% if (editing) {%>Update  product <%}else{%>Add product<%} %></button>
         </form>
     </main>
