--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,3 +1,4 @@
 <form action="/cart" method="POST">
+    <input type="hidden" name="_csrf" value="<%=csrfToken%>">
     <button class="btn">Add to Cart</button>
     <input type="hidden" name="productId" value="<%=product._id %>">
