--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -9,10 +9,16 @@
                 <ul class="cart__item-list">
                     <% products.forEach(p => { %>
                         <li class="cart__item">
-                            <h1><%= p.title %></h1>
+                            <div class="product">
+                            <img  class="image" src="<%= p.productId.imageUrl %>" alt="<%= %>">
+                            <h1><%= p.productId.title %></h1>
+                            </div>
                             <h2>Quantity: <%= p.quantity %></h2>
+                            <h2>Price: <%= (p.productId.price)*p.quantity%>$</h2>
                             <form action="/cart-delete-item" method="POST">
-                                <input type="hidden" value="<%= p._id %>" name="productId">
+                                <input type="hidden" name="_csrf" value="<%=csrfToken%>">
+                                <input type="hidden" value="<%= p.productId._id %>" name="productId">
+                                <input type="hidden" value="<%= (p.productId.price)*p.quantity %>" name="price">
                                 <button class="btn danger" type="submit">Delete</button>
                             </form>
                         </li>
@@ -21,10 +27,12 @@
                 <hr>
                 <div class="centered">
                     <form action="/create-order" method="POST">
-                        <button type="submit" class="btn">Order Now</button>
+                        <input type="hidden" name="_csrf" value="<%=csrfToken%>">
+                        <button type="submit" class="btn">Order Now!</button>
                     </form>
+                    <h1>Cart Total:<%= total%>$</h1>
                 </div>
-               
+                
             <% } else { %>
                 <h1>No Products in Cart!</h1>
             <% } %>
