--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -14,7 +14,7 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%= product.imageUrl %>"
+                            <img src="/<%= product.imageUrl %>"
                                 alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
@@ -23,7 +23,9 @@
                         </div>
                         <div class="card__actions">
                             <a href="/products/<%=product._id%>" class="btn">Details</a>
-                            <%- include('../includes/add-to-cart.ejs',{product:product} )%>
+                            <% if ( isAuthenticated) { %>
+                                <%- include('../includes/add-to-cart.ejs',{product:product} )%>
+                                <%}%>
                             </form>
                         </div>
                     </article>
